--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -37,14 +37,14 @@
     &__image--three {
         grid-column: 1 / 3;
         grid-row: 1 / 3;
-        background-image: url("/ecommerce-project/img/sport/bruce-mars-ZXq7xoo98b0-unsplash.jpg");
+        background-image: url("../img/sport/bruce-mars-ZXq7xoo98b0-unsplash.jpg");
         background-size: cover;
     }
 
     &__image--sit {
         grid-column: 3 / 5;
         grid-row: 1 / 4;
-        background-image: url("/ecommerce-project/img/anastase-maragos-HyvE5SiKMUs-unsplash.jpg");
+        background-image: url("../img/anastase-maragos-HyvE5SiKMUs-unsplash.jpg");
         background-size: cover;
         background-position: center;
 
@@ -57,7 +57,7 @@
     &__image--bridge {
         grid-column: 1 / 3;
         grid-row: 3 / 5;
-        background-image: url("/ecommerce-project/img/sport/curtis-macnewton-5rKPeFcsSTY-unsplash.jpg");
+        background-image: url("../img/sport/curtis-macnewton-5rKPeFcsSTY-unsplash.jpg");
         background-size: cover;
 
         @media only screen and (max-width: $breakpoint-main) {
@@ -68,7 +68,7 @@
     &__image--teal {
         grid-column: 7 / 9;
         grid-row: 1 / 6;
-        background-image: url("/ecommerce-project/img/sport/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
+        background-image: url("../img/sport/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
         background-size: cover;
 
         @media only screen and (max-width: $breakpoint-main) {
@@ -79,14 +79,14 @@
     &__image--dark {
         grid-column: 3 / 6;
         grid-row: 4 / 6;
-        background-image: url("/ecommerce-project/img/sport/nourdine-diouane-hcJnA6Tvy8g-unsplash.jpg");
+        background-image: url("../img/sport/nourdine-diouane-hcJnA6Tvy8g-unsplash.jpg");
         background-size: cover;
     }
 
     &__image--bar {
         grid-column: 5 / 7;
         grid-row: 1 / 4;
-        background-image: url("/ecommerce-project/img/sport/allef-vinicius-do-0ghSDd2E-unsplash.jpg");
+        background-image: url("../img/sport/allef-vinicius-do-0ghSDd2E-unsplash.jpg");
         background-size: cover;
 
         @media only screen and (max-width: $breakpoint-main) {
@@ -99,7 +99,7 @@
     &__image--start {
         grid-column: 6 / 7;
         grid-row: 4 / 6;
-        background-image: url("/ecommerce-project/img/sport/sam-knight-lFR7N0TCR_E-unsplash.jpg");
+        background-image: url("../img/sport/sam-knight-lFR7N0TCR_E-unsplash.jpg");
         background-size: cover;
         background-position: top;
     }
@@ -107,7 +107,7 @@
     &__image--roll {
         grid-column: 1 / 3;
         grid-row: 5 / 6;
-        background-image: url("/ecommerce-project/img/sport/jonathan-borba-0KGct860xWA-unsplash.jpg");
+        background-image: url("../img/sport/jonathan-borba-0KGct860xWA-unsplash.jpg");
         background-size: cover;
         background-position: center;
 
