updated responsive styles

--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -13,6 +13,8 @@
         display: none;
     }    
 
+    // Make the main gallery full screen, so to speak, and only include the top nav on scroll 
+
     &__text {
         display: none;
         text-align: center;
