--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,9 @@ body {
   @media only screen and (max-width: 750px) {
     .container {
       grid-template-columns: 100%;
-      grid-row: 2 / 3; } }
+      grid-row: 2 / 3;
+      padding: 2.5rem;
+      margin: 2.5rem 0; } }
 
 .card {
   height: 40rem;
@@ -88,6 +90,18 @@ body {
     background-image: url("../img/camilla-carvalho-4IS9Sal3_ks-unsplash.jpg");
     background-position: top;
     background-size: cover; }
+  .card__image--dragonball {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/jusdevoyage--w4HlwNLIM4-unsplash.jpg");
+    background-position: bottom;
+    background-size: cover; }
+  .card__image--newbalance {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/benjamin-sow-s5nV624t42U-unsplash.jpg");
+    background-position: top;
+    background-size: cover; }
   .card__text {
     padding: 1rem 0 0 1rem; }
     .card__text--header {
@@ -101,8 +115,10 @@ body {
       margin-top: .4rem;
       background-color: transparent;
       border: .1rem solid lightgrey;
-      transition: all 1s; }
+      transition: all .5s; }
       .card__text--button:hover {
+        background-color: lightgray;
+        color: black;
         border: .1rem solid darkslategrey;
         cursor: pointer; }
 
@@ -118,7 +134,7 @@ body {
       padding: 5rem 12.5rem; } }
   @media only screen and (max-width: 750px) {
     .footer {
-      padding: 5rem 10rem; } }
+      padding: 5rem 2.5rem; } }
   .footer__logo {
     padding: 0 2.5rem;
     margin-right: auto;
@@ -169,7 +185,7 @@ body {
       padding: 0 12.5rem; } }
   @media only screen and (max-width: 750px) {
     .nav {
-      padding: 0 10rem; } }
+      padding: 0 2.5rem; } }
   .nav__logo {
     padding: 0 2.5rem;
     margin-right: auto;
@@ -214,7 +230,8 @@ body {
     height: 2.5rem;
     width: 3rem;
     transition: all 1s;
-    position: fixed; }
+    position: fixed;
+    cursor: pointer; }
     .nav__square.open .nav__ham {
       background: transparent; }
     .nav__square.open .nav__ham::before {
