--- a/sass/jeans.scss
+++ b/sass/jeans.scss
@@ -18,6 +18,8 @@
     @media only screen and (max-width: $breakpoint-tab) {
         grid-template-columns: 100%;
         grid-row: 2 / 3;
+        padding: 2.5rem;
+        margin: 2.5rem 0;
     }
 }
 
@@ -73,23 +75,23 @@
         // Photo: Camilla Carvalho on Unsplash
     }
 
-    // &__image--blue-jeans {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url("/ecommerce-project/img/alfredh-h-nI7_xoc4_4A-unsplash.jpg");
-    //     background-position: top;
-    //     background-size: cover;
-        // Photo: Alfredh H on Unsplash
-    // }
+    &__image--dragonball {
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/jusdevoyage--w4HlwNLIM4-unsplash.jpg");
+        background-position: bottom;
+        background-size: cover;
+        // Photo: Jusdevoyage on Unsplash 
+    }
 
-    // &__image--blue-top {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url("/ecommerce-project/img/peter-john-manlapig-RAjpj5SVvHI-unsplash.jpg");
-    //     background-position: top;
-    //     background-size: cover;
-        // Photo: Peter John Manlapig on Unsplash
-    // }
+    &__image--newbalance {
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/benjamin-sow-s5nV624t42U-unsplash.jpg");
+        background-position: top;
+        background-size: cover;
+        // Photo: Benjamin Sow on Unsplash
+    }
 
     // &__image--mexico {
     //     width: 100%;
@@ -145,9 +147,11 @@
             margin-top: .4rem;
             background-color: transparent;
             border: .1rem solid lightgrey;
-            transition: all 1s;
+            transition: all .5s;
 
             &:hover {
+                background-color: lightgray;
+                color: black;
                 border: .1rem solid darkslategrey;
                 cursor: pointer;
             }
@@ -162,6 +166,8 @@
 // Red Nike shoes: Zain Ali on Pexels
 // White Adidas t-shirt: David Geib from Pexels
 // Red Adidas t-shirt: Camilla Carvalho on Unsplash
+// Dragonball t-shirt: Jusdevoyage on Unsplash
+// Newbalance: Benjamin Sow on Unsplash
 
 
 
