updating cart functionality

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -2,6 +2,8 @@
 
 $breakpoint-main: 1100px;
 $breakpoint-tab: 750px;
+$breakpoint-phone: 500px;
+$breakpoint-phone-sm: 350px;
 
 // Colour variables
 
