--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ body {
     .card {
       height: 60rem;
       width: 40rem; } }
+  @media only screen and (max-width: 350px) {
+    .card {
+      height: 50rem;
+      width: 30rem; } }
   .card:hover {
     border: .15rem solid darkslategrey; }
     @media only screen and (max-width: 750px) {
@@ -114,16 +118,21 @@ body {
       font-size: 1.3rem; }
     .card__text--button {
       font-family: inherit;
+      border-radius: .25rem;
       padding: .25rem;
       margin-top: .4rem;
       background-color: transparent;
       border: .1rem solid lightgrey;
       transition: all .5s; }
+      .card__text--buttonClicked {
+        background-color: red; }
       .card__text--button:hover {
         background-color: lightgray;
         color: black;
         border: .1rem solid darkslategrey;
         cursor: pointer; }
+      .card__text--button:active {
+        outline: none; }
 
 .footer {
   display: flex;
@@ -163,9 +172,6 @@ body {
     justify-content: flex-end;
     align-items: center;
     list-style: none; }
-    @media only screen and (max-width: 500px) {
-      .footer__list {
-        display: none; } }
     .footer__list--item {
       font-size: 1.5rem;
       text-transform: uppercase;
@@ -178,6 +184,9 @@ body {
       @media only screen and (max-width: 750px) {
         .footer__list--item {
           padding: 0 1rem; } }
+      @media only screen and (max-width: 500px) {
+        .footer__list--item {
+          display: none; } }
       .footer__list--item:hover {
         transform: scale(1.1);
         color: #ff4b1f;
@@ -450,7 +459,7 @@ small {
   height: 100vh;
   width: 30vw;
   z-index: 1;
-  transform: translateX(40rem);
+  transform: translateX(50rem);
   transition: all 1s; }
   .cart--open {
     transform: translateX(0); }
