--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -43,11 +43,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        list-style: none;
-
-        @media only screen and (max-width: 500px) {
-            display: none;
-        } // come back to this later.
+        list-style: none; 
 
         &--item {
             font-size: 1.5rem;
@@ -65,6 +61,10 @@
 
             @media only screen and (max-width: $breakpoint-tab) {
                 padding: 0 1rem;
+            }
+
+            @media only screen and (max-width: $breakpoint-phone) {
+                display: none;
             }
 
             &:hover {
