--- a/sass/jeans.scss
+++ b/sass/jeans.scss
@@ -22,7 +22,7 @@
         margin: 2.5rem 0;
     }
 
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $breakpoint-phone) {
         padding: 2.5rem .5rem;
     } // come back to this later.
 }
@@ -40,6 +40,11 @@
     @media only screen and (max-width: $breakpoint-tab) {
         height: 60rem;
         width: 40rem;   
+    }
+
+    @media only screen and (max-width: $breakpoint-phone-sm) {
+        height: 50rem;
+        width: 30rem;
     }
 
     &:hover {
@@ -147,17 +152,30 @@
 
         &--button {
             font-family: inherit;
+            border-radius: .25rem;
             padding: .25rem;
             margin-top: .4rem;
             background-color: transparent;
             border: .1rem solid lightgrey;
             transition: all .5s;
 
+            &Clicked {
+                background-color: red;
+            }
+
             &:hover {
                 background-color: lightgray;
                 color: black;
                 border: .1rem solid darkslategrey;
                 cursor: pointer;
+                // transform: translateY(-.3rem);
+                // box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+            }
+
+            &:active {
+                outline: none;
+                // transform: translateY(0rem);
+                // box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
             }
         }
     }
