--- a/sass/jeans.scss
+++ b/sass/jeans.scss
@@ -28,6 +28,7 @@
 }
 
 .card {
+    // Turn off the hover effects on the button after the item is added to the cart.
     height: 40rem;
     width: 25rem;
     border: .15rem solid lightgrey;
