--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,155 +1,148 @@
 .nav {
+  display: flex;
+  align-items: center;
+  grid-row: 1 / 2;
+  background-color: $whitesmoke;
+  padding: 0 15rem;
+
+  @media only screen and (max-width: 1100px) {
+    padding: 0 12.5rem;
+  }
+
+  @media only screen and (max-width: 750px) {
+    padding: 0 2.5rem;
+  }
+
+  @media only screen and (max-width: 500px) {
+    padding: 5rem 0.5rem;
+  } // come back to this later.
+
+  &__logo {
+    padding: 0 2.5rem;
+    margin-right: auto;
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 1.5rem;
+    font-weight: 400;
+    color: transparent;
+    background: linear-gradient(to right, $primary-brand, $primary-light);
+    -webkit-background-clip: text;
+
+    @media only screen and (max-width: $breakpoint-main) {
+      padding: 0 1.5rem;
+    }
+
+    @media only screen and (max-width: $breakpoint-tab) {
+      padding: 0 1rem;
+    }
+  }
+
+  &__list {
+    width: 100%;
     display: flex;
     align-items: center;
-    grid-row: 1 / 2;
-    background-color: $whitesmoke;
-    padding: 0 15rem;
+    justify-content: flex-end;
+    list-style: none;
 
-    @media only screen and (max-width: 1100px) {
-        padding: 0 12.5rem;
-    }
+    &--item {
+      font-size: 1.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.25rem;
+      padding: 0 2.5rem;
+      cursor: pointer;
+      transition: all 1s;
 
-    @media only screen and (max-width: 750px) {
-        padding: 0 2.5rem;
-    }
-
-    @media only screen and (max-width: 500px) {
-        padding: 5rem .5rem;
-    } // come back to this later.
-
-    &__logo {
-        padding: 0 2.5rem;
-        margin-right: auto;
-        font-size: 3rem;
-        text-transform: uppercase;
-        letter-spacing: 1.5rem;
-        font-weight: 400;
-        color: transparent;
-        background: linear-gradient(to right, $primary-brand, $primary-light);
-        -webkit-background-clip: text;
-
-        @media only screen and (max-width: $breakpoint-main) {
-            padding: 0 1.5rem;
-        }
-
-        @media only screen and (max-width: $breakpoint-tab) {
-            padding: 0 1rem;
-        }
-    }
-
-    &__list {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        list-style: none;
-
-        &--item {
-            font-size: 1.75rem;
-            text-transform: uppercase;
-            letter-spacing: .25rem;
-            padding: 0 2.5rem;
-            cursor: pointer;
-            transition: all 1s;
-
-            &:hover {
-                transform: scale(1.1);
-                color: $primary-brand;
-                cursor: pointer;
-                // background: linear-gradient(to right, #ff4b1f, #ff9068);
-                // -webkit-background-clip: text;
-                // color: transparent;
-            }
-
-            @media only screen and (max-width: $breakpoint-main) {
-                padding: 0 1.5rem;
-            }
-
-            @media only screen and (max-width: $breakpoint-tab) {
-                padding: 0 1rem;
-                display: none;
-            }
-        }
-    }
-
-    &__square {
-        // visibility: hidden;
-        height: 2.5rem;
-        width: 3rem;
-        transition: all 1s;
-        // border: 2px solid orangered;
-        position: fixed;
+      &:hover {
+        transform: scale(1.1);
+        color: $primary-brand;
         cursor: pointer;
+        // background: linear-gradient(to right, #ff4b1f, #ff9068);
+        // -webkit-background-clip: text;
+        // color: transparent;
+      }
 
-        @media only screen and (max-width: $breakpoint-phone) {
-            padding: 0 5rem;
-        }
+      @media only screen and (max-width: $breakpoint-main) {
+        padding: 0 1.5rem;
+      }
 
-        &.open .nav__ham {
-            // transform: translateX(2rem);
-            background: transparent;
-        }
-
-        &.open .nav__ham::before {
-            // transform: translateX(2rem);
-            transform: rotate(-45deg);
-        }
-
-        &.open .nav__ham::after {
-            // transform: translateX(2rem);
-            transform: rotate(45deg);
-        }
-    }
-
-    &__ham {
+      @media only screen and (max-width: $breakpoint-tab) {
+        padding: 0 1rem;
         display: none;
-        height: .2rem;
-        width: 3rem;
-        background-color: $dark-text;
-        position: relative;
-        transition: all 1s; 
-
-        @media only screen and (max-width: $breakpoint-tab) {
-            display: inline-block;
-            // position: fixed;
-            // This changes the spacing of the hamburger element, so I've kept it off for now. 
-        }
-
-        &::before, 
-        &::after {
-            content: "";
-            position: absolute;
-            height: .2rem;
-            width: 3rem;
-            background-color: $dark-text;
-            transition: all 1s;
-
-            // &:active {
-            //     color: orangered;
-            // }
-        }
-
-        &::before {
-            transform: translateY(-.9rem);
-        }
-
-        &::after {
-            transform: translateY(.9rem);
-        }
+      }
     }
+  }
+
+  &__square {
+    visibility: hidden;
+    height: 2.5rem;
+    width: 3rem;
+    transition: all 1s;
+    // border: 2px solid orangered;
+    position: fixed;
+    cursor: pointer;
+
+    @media only screen and (max-width: $breakpoint-phone) {
+      padding: 0 5rem;
+    }
+
+    &.open .nav__ham {
+      // transform: translateX(2rem);
+      background: transparent;
+    }
+
+    &.open .nav__ham::before {
+      // transform: translateX(2rem);
+      transform: rotate(-45deg);
+    }
+
+    &.open .nav__ham::after {
+      // transform: translateX(2rem);
+      transform: rotate(45deg);
+    }
+  }
+
+  &__ham {
+    // display: none;
+    height: 0.2rem;
+    width: 3rem;
+    background-color: $dark-text;
+    position: relative;
+    transition: all 1s;
+
+    @media only screen and (max-width: $breakpoint-tab) {
+      display: inline-block;
+      // position: fixed;
+      // This changes the spacing of the hamburger element, so I've kept it off for now.
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      height: 0.2rem;
+      width: 3rem;
+      background-color: $dark-text;
+      transition: all 1s;
+
+      // &:active {
+      //     color: orangered;
+      // }
+    }
+
+    &::before {
+      transform: translateY(-0.9rem);
+    }
+
+    &::after {
+      transform: translateY(0.9rem);
+    }
+  }
 }
 
 .far,
 .fas {
-    font-size: 3rem;
-    color: transparent;
-    background: linear-gradient(to right, $primary-brand, $primary-light);
-    -webkit-background-clip: text;
+  font-size: 3rem;
+  color: transparent;
+  background: linear-gradient(to right, $primary-brand, $primary-light);
+  -webkit-background-clip: text;
 }
-
-// .nav__square.open .nav__ham {
-//     transform: translateX(-5rem);
-// }
-
-
-
