--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,23 @@ body {
       background-color: transparent;
       border: .1rem solid lightgrey;
       transition: all .5s; }
-      .card__text--buttonClicked {
-        background-color: red; }
       .card__text--button:hover {
         background-color: lightgray;
         color: black;
         border: .1rem solid darkslategrey;
         cursor: pointer; }
+      .card__text--button:focus {
+        outline: none; }
       .card__text--button:active {
+        outline: none; }
+    .card__text--buttonNoHover {
+      font-family: inherit;
+      border-radius: .25rem;
+      padding: .25rem;
+      margin-top: .4rem;
+      background-color: transparent;
+      border: .1rem solid lightgrey; }
+      .card__text--buttonNoHover:focus {
         outline: none; }
 
 .footer {
@@ -247,6 +256,12 @@ body {
         .nav__list--item {
           padding: 0 1rem;
           display: none; } }
+    .nav__list--num {
+      position: fixed;
+      display: none; }
+    .nav__list--numVisible {
+      position: fixed;
+      display: block; }
   .nav__square {
     visibility: hidden;
     height: 2.5rem;
@@ -476,6 +491,11 @@ small {
       padding: 1rem 0;
       margin: 1rem 0;
       border-bottom: 0.1rem solid darkslategrey; }
+    .cart__list--itemButton {
+      padding: .5rem;
+      font-family: inherit;
+      border-radius: .25rem;
+      border: none; }
     .cart__list--rowButtons {
       display: flex;
       justify-content: space-between;
