--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -25,6 +25,7 @@
 
     &--heading {
       border-bottom: 0.25rem solid black;
+      // color: red;
     }
 
     &--item {
@@ -34,6 +35,13 @@
       border-bottom: 0.1rem solid darkslategrey;
     }
 
+    &--itemButton {
+      padding: .5rem;
+      font-family: inherit;
+      border-radius: .25rem;
+      border: none;
+    }
+
     &--rowButtons {
       display: flex;
       justify-content: space-between;
@@ -41,7 +49,7 @@
       font-family: inherit;
       font-size: 1.75rem;
     }
-  }
+  } // todo style buttons!
 }
 
 .cartIcon {
