--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,9 +1,12 @@
 .nav {
+  // todo add something to the cart icon to show how many items are in the cart.
   display: flex;
   align-items: center;
   grid-row: 1 / 2;
   background-color: $whitesmoke;
   padding: 0 15rem;
+
+  // todo the tab size has changed in this file.
 
   @media only screen and (max-width: 1100px) {
     padding: 0 12.5rem;
@@ -69,6 +72,16 @@
         padding: 0 1rem;
         display: none;
       }
+    }
+
+    &--num {
+      position: fixed;
+      display: none;
+    }
+
+    &--numVisible {
+      position: fixed;
+      display: block;
     }
   }
 
