--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
       padding: 5rem 2.5rem; } }
   @media only screen and (max-width: 500px) {
     .footer {
-      padding: 5rem .5rem; } }
+      padding: 5rem 0.5rem; } }
   .footer__logo {
     padding: 0 2.5rem;
     margin-right: auto;
@@ -184,7 +184,7 @@ body {
     .footer__list--item {
       font-size: 1.5rem;
       text-transform: uppercase;
-      letter-spacing: .25rem;
+      letter-spacing: 0.25rem;
       padding: 0 2.5rem;
       transition: all 1s; }
       @media only screen and (max-width: 1100px) {
@@ -258,6 +258,8 @@ body {
           display: none; } }
     .nav__list--num {
       position: fixed;
+      top: 2.25rem;
+      right: 14rem;
       display: none; }
     .nav__list--numVisible {
       position: fixed;
@@ -332,7 +334,7 @@ body {
         grid-column: 3 / 7;
         grid-row: 1 / 4;
         align-self: center;
-        padding: .5rem 2rem; } }
+        padding: 0.5rem 2rem; } }
   .gallery__image--three {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
@@ -475,7 +477,7 @@ small {
   width: 30vw;
   z-index: 1;
   transform: translateX(50rem);
-  transition: all .75s;
+  transition: all 0.75s;
   padding: 2rem; }
   .cart--open {
     transform: translateX(0); }
@@ -492,9 +494,9 @@ small {
       margin: 1rem 0;
       border-bottom: 0.1rem solid darkslategrey; }
     .cart__list--itemButton {
-      padding: .5rem;
+      padding: 0.5rem;
       font-family: inherit;
-      border-radius: .25rem;
+      border-radius: 0.25rem;
       border: none; }
     .cart__list--rowButtons {
       display: flex;
