--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -1,86 +1,86 @@
 .cart {
-  // Add an animation to the cart logo 
-  position: fixed;
-  top: 0;
-  right: 0;
-  background-color: whitesmoke;
-  height: 100vh;
-  width: 30vw;
-  z-index: 1;
-  transform: translateX(50rem); // todo Fix this on lorge screens.
-  transition: all .75s;
-  padding: 2rem;
+    // Add an animation to the cart logo
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: whitesmoke;
+    height: 100vh;
+    width: 30vw;
+    z-index: 1;
+    transform: translateX(50rem); // todo Fix this on lorge screens.
+    transition: all 0.75s;
+    padding: 2rem;
 
-  &--open {
-    transform: translateX(0);
-  }
-
-  &__list {
-    list-style: none;
-    font-family: inherit;
-    font-size: 1.75rem;
-    display: flex;
-    flex-direction: column;
-    // padding: 4rem 1rem 2rem 1rem;
-
-    &--heading {
-      border-bottom: 0.25rem solid black;
-      // color: red;
+    &--open {
+        transform: translateX(0);
     }
 
-    &--item {
-      // display: flex;
-      padding: 1rem 0;
-      margin: 1rem 0;
-      border-bottom: 0.1rem solid darkslategrey;
-    }
+    &__list {
+        list-style: none;
+        font-family: inherit;
+        font-size: 1.75rem;
+        display: flex;
+        flex-direction: column;
+        // padding: 4rem 1rem 2rem 1rem;
 
-    &--itemButton {
-      padding: .5rem;
-      font-family: inherit;
-      border-radius: .25rem;
-      border: none;
-    }
+        &--heading {
+            border-bottom: 0.25rem solid black;
+            // color: red;
+        }
 
-    &--rowButtons {
-      display: flex;
-      justify-content: space-between;
-      list-style: none;
-      font-family: inherit;
-      font-size: 1.75rem;
-    }
-  } // todo style buttons!
+        &--item {
+            // display: flex;
+            padding: 1rem 0;
+            margin: 1rem 0;
+            border-bottom: 0.1rem solid darkslategrey;
+        }
+
+        &--itemButton {
+            padding: 0.5rem;
+            font-family: inherit;
+            border-radius: 0.25rem;
+            border: none;
+        }
+
+        &--rowButtons {
+            display: flex;
+            justify-content: space-between;
+            list-style: none;
+            font-family: inherit;
+            font-size: 1.75rem;
+        }
+    } // todo style buttons!
 }
 
 .cartIcon {
-  // z-index: 2;
-  position: fixed;
+    // z-index: 2;
+    position: fixed;
 
-  &--open:hover {
-    transform: none;
-    cursor: default; // This is causing a minor glith when hovering over the icon.
-  }
+    &--open:hover {
+        transform: none;
+        cursor: default;
+    }
 }
 
 .overlay {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(0.2rem);
-  visibility: hidden;
-  opacity: 0;
-  transition: all 1s;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(0.2rem);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1s;
 
-  &--open {
-    visibility: visible;
-    opacity: 1;
-  }
+    &--open {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 // Removing the og price
 .ogPrice {
-  display: none;
+    display: none;
 }
