--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -9,11 +9,11 @@
     grid-gap: 1.5rem;
 
     @media only screen and (max-width: $breakpoint-main) {
-        // Gallery disappears below 1100px. 
+        // Gallery disappears below 1100px.
         display: none;
-    }    
+    }
 
-    // Make the main gallery full screen, so to speak, and only include the top nav on scroll 
+    // Make the main gallery full screen, so to speak, and only include the top nav on scroll
 
     &__text {
         display: none;
@@ -32,7 +32,7 @@
             grid-column: 3 / 7;
             grid-row: 1 / 4;
             align-self: center;
-            padding: .5rem 2rem;
+            padding: 0.5rem 2rem;
         }
     }
 
@@ -118,8 +118,3 @@
         }
     }
 }
-
-
-
-
-
