--- a/css/style.css
+++ b/css/style.css
@@ -244,9 +244,9 @@ body {
       letter-spacing: 0.25rem;
       padding: 0 2.5rem;
       cursor: pointer;
-      transition: all 1s; }
+      transition: all .75s; }
       .nav__list--item:hover {
-        transform: scale(1.1);
+        transform: scale(1.2);
         color: #ff4b1f;
         cursor: pointer; }
       @media only screen and (max-width: 1100px) {
@@ -257,10 +257,15 @@ body {
           padding: 0 1rem;
           display: none; } }
     .nav__list--num {
+      height: 2rem;
+      width: 2rem;
+      font-size: 1.5rem;
+      text-align: center;
       position: fixed;
-      top: 2.25rem;
-      right: 14rem;
-      display: none; }
+      top: 2.5%;
+      right: 13%;
+      display: none;
+      border-radius: 50%; }
     .nav__list--numVisible {
       position: fixed;
       display: block; }
@@ -338,7 +343,7 @@ body {
   .gallery__image--three {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
-    background-image: url("../img/sport/bruce-mars-ZXq7xoo98b0-unsplash.jpg");
+    background-image: url("../img/bruce-mars-ZXq7xoo98b0-unsplash.jpg");
     background-size: cover; }
   .gallery__image--sit {
     grid-column: 3 / 5;
@@ -353,7 +358,7 @@ body {
   .gallery__image--bridge {
     grid-column: 1 / 3;
     grid-row: 3 / 5;
-    background-image: url("../img/sport/curtis-macnewton-5rKPeFcsSTY-unsplash.jpg");
+    background-image: url("../img/curtis-macnewton-5rKPeFcsSTY-unsplash.jpg");
     background-size: cover; }
     @media only screen and (max-width: 1100px) {
       .gallery__image--bridge {
@@ -361,7 +366,7 @@ body {
   .gallery__image--teal {
     grid-column: 7 / 9;
     grid-row: 1 / 6;
-    background-image: url("../img/sport/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
+    background-image: url("../img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
     background-size: cover; }
     @media only screen and (max-width: 1100px) {
       .gallery__image--teal {
@@ -369,12 +374,12 @@ body {
   .gallery__image--dark {
     grid-column: 3 / 6;
     grid-row: 4 / 6;
-    background-image: url("../img/sport/nourdine-diouane-hcJnA6Tvy8g-unsplash.jpg");
+    background-image: url("../img/nourdine-diouane-hcJnA6Tvy8g-unsplash.jpg");
     background-size: cover; }
   .gallery__image--bar {
     grid-column: 5 / 7;
     grid-row: 1 / 4;
-    background-image: url("../img/sport/allef-vinicius-do-0ghSDd2E-unsplash.jpg");
+    background-image: url("../img/allef-vinicius-do-0ghSDd2E-unsplash.jpg");
     background-size: cover; }
     @media only screen and (max-width: 1100px) {
       .gallery__image--bar {
@@ -384,13 +389,13 @@ body {
   .gallery__image--start {
     grid-column: 6 / 7;
     grid-row: 4 / 6;
-    background-image: url("../img/sport/sam-knight-lFR7N0TCR_E-unsplash.jpg");
+    background-image: url("../img/sam-knight-lFR7N0TCR_E-unsplash.jpg");
     background-size: cover;
     background-position: top; }
   .gallery__image--roll {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
-    background-image: url("../img/sport/jonathan-borba-0KGct860xWA-unsplash.jpg");
+    background-image: url("../img/jonathan-borba-0KGct860xWA-unsplash.jpg");
     background-size: cover;
     background-position: center; }
     @media only screen and (max-width: 1100px) {
