--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -1,11 +1,10 @@
 .cart {
-    // Add an animation to the cart logo
     position: fixed;
     top: 0;
     right: 0;
     background-color: whitesmoke;
     height: 100vh;
-    width: 30vw;
+    width: 30vw; // change this on smaller devices
     z-index: 1;
     transform: translateX(50rem); // todo Fix this on lorge screens.
     transition: all 0.75s;
@@ -21,18 +20,17 @@
         font-size: 1.75rem;
         display: flex;
         flex-direction: column;
-        // padding: 4rem 1rem 2rem 1rem;
 
         &--heading {
             border-bottom: 0.25rem solid black;
-            // color: red;
         }
 
         &--item {
-            // display: flex;
+            // This is the item container
             padding: 1rem 0;
             margin: 1rem 0;
             border-bottom: 0.1rem solid darkslategrey;
+            // display: flex;
         }
 
         &--itemButton {
@@ -48,8 +46,13 @@
             list-style: none;
             font-family: inherit;
             font-size: 1.75rem;
+            display: none;
+
+            &--vis {
+                display: flex;
+            }
         }
-    } // todo style buttons!
+    } 
 }
 
 .cartIcon {
@@ -83,4 +86,28 @@
 // Removing the og price
 .ogPrice {
     display: none;
+}
+
+.btn {
+    padding: .8rem;
+    font-family: inherit;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: #707070;
+    color: whitesmoke;
+    cursor: pointer;
+
+    &:focus {
+        outline: none;
+    }
+
+    &--quantity {
+        padding: .2rem;
+        height: 3.25rem;
+        width: 3.25rem;
+
+        &:focus {
+            outline: none;
+        }
+    }
 }
