added new cards

--- a/sass/jeans.scss
+++ b/sass/jeans.scss
@@ -103,32 +103,32 @@
         // Photo: Benjamin Sow on Unsplash
     }
 
-    // &__image--mexico {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url("/ecommerce-project/img/rudy-lopez-eA5of0W3USA-unsplash.jpg");
-    //     background-position: top;
-    //     background-size: cover;
+    &__image--mexico {
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/rudy-lopez-eA5of0W3USA-unsplash.jpg");
+        background-position: top;
+        background-size: cover;
         // Photo: Rudy López on Unsplash 
-    // }
+    }
 
-    // &__image--suit {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url("/ecommerce-project/img/alex-robinson-6Md6LUpsLp4-unsplash.jpg");
-    //     background-position: top;
-    //     background-size: cover;
-        // Photo: Photo by Alex Robinson on Unsplash
-    // }
+    &__image--bone {
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/ian-dooley-8HqPXTToMn0-unsplash.jpg");
+        background-position: top;
+        background-size: cover;
+        // Photo: Photo by Ian Dooley on Unsplash
+    }
 
-    // &__image--beard {
-    //     width: 100%;
-    //     height: 100%;
-    //     background-image: url("/ecommerce-project/img/sorin-sirbu-ifYt0sKdJYk-unsplash.jpg");
-    //     background-position: top;
-    //     background-size: cover;
-        // Photo: Photo by Sorin Sîrbu on Unsplash 
-    // }
+    &__image--jacket {
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/dami-adebayo-k6aQzmIbR1s-unsplash.jpg");
+        background-position: top;
+        background-size: cover;
+        // Photo: Photo by Dami Adebayo on Unsplash 
+    }
 
     // &__image--blonde {
     //     width: 100%;
