--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,24 @@ body {
     background-image: url("../img/benjamin-sow-s5nV624t42U-unsplash.jpg");
     background-position: top;
     background-size: cover; }
+  .card__image--mexico {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/rudy-lopez-eA5of0W3USA-unsplash.jpg");
+    background-position: top;
+    background-size: cover; }
+  .card__image--bone {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/ian-dooley-8HqPXTToMn0-unsplash.jpg");
+    background-position: top;
+    background-size: cover; }
+  .card__image--jacket {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/dami-adebayo-k6aQzmIbR1s-unsplash.jpg");
+    background-position: top;
+    background-size: cover; }
   .card__text {
     padding: 1rem 0 0 1rem; }
     .card__text--header {
@@ -483,7 +501,8 @@ small {
   z-index: 1;
   transform: translateX(50rem);
   transition: all 0.75s;
-  padding: 2rem; }
+  padding: 2rem;
+  overflow: scroll; }
   .cart--open {
     transform: translateX(0); }
   .cart__list {
