--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -9,6 +9,7 @@
     transform: translateX(50rem); // todo Fix this on lorge screens.
     transition: all 0.75s;
     padding: 2rem;
+    overflow: scroll;
 
     &--open {
         transform: translateX(0);
