--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -15,54 +15,49 @@
         transform: translateX(0);
     }
 
-    &__list {
+    &__top {
         list-style: none;
         font-family: inherit;
         font-size: 1.75rem;
         display: flex;
         flex-direction: column;
+    }
 
-        &--heading {
-            border-bottom: 0.25rem solid black;
+    &__heading {
+        border-bottom: 0.25rem solid black;
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    &__total {
+        font-size: 1.75rem;
+        display: none;
+
+        &.visible {
+            display: block;
         }
+    }
 
-        &--item {
-            // This is the item container
-            padding: 1rem 0;
-            margin: 1rem 0;
-            border-bottom: 0.1rem solid darkslategrey;
-            display: flex;
-            flex-direction: column;
-        }
+    &__item {
+        // This is the item container
+        padding: 1rem 0;
+        margin: 1rem 0;
+        border-bottom: 0.1rem solid darkslategrey;
+        display: flex;
+        flex-direction: column;
+    }
 
-        &--itemName {
-            width: 15rem;
-        }
+    &__item-name {
+        width: 15rem;
+    }
 
-        &--itemPrice {
-            width: 15rem;
-        }
-
-        &--itemButton {
-            padding: 0.5rem;
-            font-family: inherit;
-            border-radius: 0.25rem;
-            border: none;
-        }
-
-        &--rowButtons {
-            display: flex;
-            justify-content: space-between;
-            list-style: none;
-            font-family: inherit;
-            font-size: 1.75rem;
-            display: none;
-
-            &--vis {
-                display: flex;
-            }
-        }
-    } 
+    &__item-price {
+        width: 15rem;
+    }
 }
 
 .cartIcon {
@@ -94,7 +89,7 @@
 }
 
 // Removing the og price
-.ogPrice {
+.original-price {
     display: none;
 }
 
