--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -8,12 +8,10 @@
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 1.5rem;
 
-    @media only screen and (max-width: $breakpoint-main) {
+    @include main {
         // Gallery disappears below 1100px.
         display: none;
     }
-
-    // Make the main gallery full screen, so to speak, and only include the top nav on scroll
 
     &__text {
         display: none;
@@ -26,7 +24,7 @@
         background: linear-gradient(to right, $primary-brand, $primary-light);
         -webkit-background-clip: text;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             // Gallery disappears below 1100px.
             display: none;
             grid-column: 3 / 7;
@@ -50,7 +48,7 @@
         background-size: cover;
         background-position: center;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             grid-column: 1 / 3;
             grid-row: 4 / 6;
         }
@@ -62,7 +60,7 @@
         background-image: url("../img/curtis-macnewton-5rKPeFcsSTY-unsplash.jpg");
         background-size: cover;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             display: none;
         }
     }
@@ -73,7 +71,7 @@
         background-image: url("../img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
         background-size: cover;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             background-position: center;
         }
     }
@@ -91,7 +89,7 @@
         background-image: url("../img/allef-vinicius-do-0ghSDd2E-unsplash.jpg");
         background-size: cover;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             grid-column: 1 / 3;
             grid-row: 1 / 4;
             background-position: center;
@@ -113,8 +111,10 @@
         background-size: cover;
         background-position: center;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             display: none;
         }
     }
 }
+
+
