--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -5,17 +5,17 @@
     background-color: $whitesmoke;
     padding: 0 15rem;
 
-    @media only screen and (max-width: 1100px) {
+    @include main {
         padding: 0 12.5rem;
-    }
+    } 
 
-    @media only screen and (max-width: 750px) {
+    @include tab {
         padding: 0 2.5rem;
     }
 
-    @media only screen and (max-width: 500px) {
+    @include phone {
         padding: 5rem 0.5rem;
-    } // come back to this later.
+    }
 
     &__logo {
         padding: 0 2.5rem;
@@ -28,11 +28,11 @@
         background: linear-gradient(to right, $primary-brand, $primary-light);
         -webkit-background-clip: text;
 
-        @media only screen and (max-width: $breakpoint-main) {
+        @include main {
             padding: 0 1.5rem;
         }
 
-        @media only screen and (max-width: $breakpoint-tab) {
+        @include tab {
             padding: 0 1rem;
         }
     }
@@ -43,117 +43,91 @@
         align-items: center;
         justify-content: flex-end;
         list-style: none;
-
-        &--item {
-            font-size: 1.75rem;
-            text-transform: uppercase;
-            letter-spacing: 0.25rem;
-            padding: 0 2.5rem;
-            cursor: pointer;
-            transition: all .75s;
-
-            &:hover {
-                transform: scale(1.2);
-                color: $primary-brand;
-                cursor: pointer;
-                // background: linear-gradient(to right, #ff4b1f, #ff9068);
-                // -webkit-background-clip: text;
-                // color: transparent;
-            }
-
-            @media only screen and (max-width: $breakpoint-main) {
-                padding: 0 1.5rem;
-            }
-
-            @media only screen and (max-width: $breakpoint-tab) {
-                padding: 0 1rem;
-                display: none;
-            }
-        }
-
-        &--num {
-            height: 2rem;
-            width: 2rem;
-            font-size: 1.5rem;
-            text-align: center;
-            position: fixed;
-            top: 2.5%;
-            right: 13%;
-            display: none;
-            // border: .2rem solid black;
-            border-radius: 50%;
-        }
-
-        &--numVisible {
-            position: fixed;
-            display: block;
-        }
     }
 
-    &__square {
-        visibility: hidden;
-        height: 2.5rem;
-        width: 3rem;
-        transition: all 1s;
-        // border: 2px solid orangered;
-        position: fixed;
+    &__icon {
+        font-size: 1.75rem;
+        text-transform: uppercase;
+        letter-spacing: 0.25rem;
+        padding: 0 2.5rem;
         cursor: pointer;
+        transition: all .75s;
 
-        @media only screen and (max-width: $breakpoint-phone) {
-            padding: 0 5rem;
+        &:hover {
+            transform: scale(1.2);
+            color: $primary-brand;
+            cursor: pointer;
         }
 
-        &.open .nav__ham {
-            // transform: translateX(2rem);
-            background: transparent;
+        @include main {
+            padding: 0 1.5rem;
         }
 
-        &.open .nav__ham::before {
-            // transform: translateX(2rem);
-            transform: rotate(-45deg);
-        }
-
-        &.open .nav__ham::after {
-            // transform: translateX(2rem);
-            transform: rotate(45deg);
+        @include tab {
+            padding: 0 1rem;
+            // display: none;
         }
     }
+}
 
-    &__ham {
-        // display: none;
+.square {
+    visibility: hidden;
+    height: 2.5rem;
+    width: 3rem;
+    transition: all 1s;
+    position: fixed;
+    cursor: pointer;
+
+    @include phone {
+        padding: 0 5rem;
+    }
+
+    &.open .nav__ham {
+        // transform: translateX(2rem);
+        background: transparent;
+    }
+
+    &.open .nav__ham::before {
+        // transform: translateX(2rem);
+        transform: rotate(-45deg);
+    }
+
+    &.open .nav__ham::after {
+        // transform: translateX(2rem);
+        transform: rotate(45deg);
+    }
+}
+
+.ham {
+    // display: none;
+    height: 0.2rem;
+    width: 3rem;
+    background-color: $dark-text;
+    position: relative;
+    transition: all 1s;
+
+    @include tab {
+        display: inline-block;
+        // position: fixed;
+        // This changes the spacing of the hamburger element, so I've kept it off for now.
+    }
+
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
         height: 0.2rem;
         width: 3rem;
         background-color: $dark-text;
-        position: relative;
         transition: all 1s;
+    }
 
-        @media only screen and (max-width: $breakpoint-tab) {
-            display: inline-block;
-            // position: fixed;
-            // This changes the spacing of the hamburger element, so I've kept it off for now.
-        }
+    &::before {
+        transform: translateY(-0.9rem);
+    }
 
-        &::before,
-        &::after {
-            content: "";
-            position: absolute;
-            height: 0.2rem;
-            width: 3rem;
-            background-color: $dark-text;
-            transition: all 1s;
-
-            // &:active {
-            //     color: orangered;
-            // }
-        }
-
-        &::before {
-            transform: translateY(-0.9rem);
-        }
-
-        &::after {
-            transform: translateY(0.9rem);
-        }
+    &::after {
+        transform: translateY(0.9rem);
     }
 }
 
